# baremetal_crt_host

./: .gitignore  CMakeLists.txt  README.adoc  config
cmake/: gcc.cmake  tools.cmake
doc/: build.adoc  configure.adoc  index.adoc
drivers/: CMakeLists.txt  command_queue.c  context.c  device.c  kernel.c  mem.c  platform.c  program.c  program_elf.c
drivers/gdb/: CMakeLists.txt  gdb_remote.c  gdb_remote_internal.h  gdb_remote_openocd.c  gdb_remote_qemu.c
drivers/pci/: CMakeLists.txt  pci_sysfs.c  pci_sysfs_internal.h  pci_sysfs_test.c
include/: config_cl.h  in_cl.h  type_cl.h  use_cl.h
include/drivers/: comm.h  command_queue.h  context.h  device.h  kernel.h  mem.h  platform.h  program.h
include/drivers/gdb/: gdb_remote.h
include/drivers/pci/: pci_sysfs.h
src/: CMakeLists.txt  cl.c  cl_command_queue.c  cl_context.c  cl_device.c  cl_enqueue.c  cl_ext.c  cl_icd.c  cl_kernel.c  cl_mem.c  cl_platform.c  cl_program.c
test/: Makefile  sgemm.c  vecadd.c  vecaddf.c
